// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Person: Stores information about people with whom wine was shared.
TastingSession: Tracks tasting sessions where wines are sampled with people.
Wine: Stores information about different wines tasted.
WineReview: Stores detailed reviews for wines, including ratings and tasting notes.
'''
}

Table Person {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    }

Table TastingSession {
    id INTEGER [primary key]
    wine_id INTEGER 
    person_id INTEGER 
    tasting_date DATE 
    }

Table Wine {
    id INTEGER [primary key]
    name VARCHAR 
    vintage INTEGER 
    grape_variety VARCHAR 
    region VARCHAR 
    }

Table WineReview {
    id INTEGER [primary key]
    wine_id INTEGER 
    review_date DATE 
    rating INTEGER 
    notes VARCHAR 
    }



// Relationships
    Ref: TastingSession.(person_id) < Person.(id)
    Ref: TastingSession.(wine_id) < Wine.(id)
    Ref: WineReview.(wine_id) < Wine.(id)
